add options page

--- a/app/popup.html
+++ b/app/popup.html
@@ -5,6 +5,7 @@
     <link href="cssCache/app/main.css" rel="stylesheet">
     <link href="bower_components/jsoneditor/dist/jsoneditor.min.css" rel="stylesheet" type="text/css">
     <script src="bower_components/requirejs/require.js"></script>
+    <script src="scripts/require-config.js"></script>
   </head>
   <body>
     <div id="root"></div>
