refactor options page to use bootstrap components

--- a/app/scripts/options/options.html
+++ b/app/scripts/options/options.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link href="/cssCache/app/main.css" rel="stylesheet">
     <link href="/bower_components/jsoneditor/dist/jsoneditor.min.css" rel="stylesheet" type="text/css">
+    <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <script src="/bower_components/requirejs/require.js"></script>
     <script src="/scripts/require-config.js"></script>
   </head>
