--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>{%= o.htmlWebpackPlugin.options.title %}</title>
-    <link rel="stylesheet" href="{%= o.htmlWebpackPlugin.options.css %}">
+    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.css %>">
   </head>
   <body>
     <div id="app"></div>
-    <script src="{%= o.htmlWebpackPlugin.options.main %}" charset="utf-8"></script>
+    <script src="<%= htmlWebpackPlugin.options.main %>" charset="utf-8"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </body>
 </html>
